[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.34184, -1.35395, 0, 0, 0, 0, 480.255, 0.35144, 0, 0, 0, 0, 480.226, 720.153, 0, 0, 0, 0, -0.624863, 719.794, 0, 0, 0, 0, -0.983353, -1.35395, 0, 0, 0, 0, -1.34184, -1.35395 )
}

[node name="Main" type="Node"]

script = ExtResource( 1 )
Mob = null

[node name="Player" parent="." instance=ExtResource( 2 )]

position = Vector2( 58.7122, 302.57 )

[node name="EnemyTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="."]

position = Vector2( 240, 450 )

[node name="EnemyPath" type="Path2D" parent="."]

curve = SubResource( 1 )

[node name="ScoreTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="hit" from="Player" to="." method="_game_over"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]


